--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,85 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: Nuggets of Information
+subtitle: From the Quagmire of My Mind
+email: pdaugavietis@sdlc.solutions
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Just somewhere to dump pearls of wisdom (and sometimes other stuff) from a old, tired nerd
+  that's been doing DevOps and related things for FAR to long :)
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "https://kautkur.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: pdaugavietis
+github_username:  pdaugavietis
+
+github:
+  is_user_page: true
+  owner_url: https://github.com/pdaugavietis
+
+jekyll-archives:
+  enabled: all
+  layout: archive
+  permalinks:
+    year: '/archives/:year/'
+    month: '/archives/:year/:month/'
+    day: '/archives/:year/:month/:day/'
+    tag: '/archives/tag/:name/'
+    category: '/archives/category/:name/'
+  layouts:
+    year: year-archive
+    month: month-archive
+    day: day-archive
+    category: tagcategory-archive
+    tag: tagcategory-archive
+
+show_downloads: false
+
+navbar-links:
+  # Posts Calendar: "posts-cal"
+  # Posts by Tag: "tags"
+  About Me: 
+    - About: "aboutme"
+    - Resume: https://registry.jsonresume.org/pdaugavietis
+  Links:
+    - Link Log: "linklog"
+    - Github: https://github.com/pdaugavietis
+    - Docker Hub: https://hub.docker.com/u/pdaugavietis/
+    - Travis CI: https://travis-ci.org/pdaugavietis
+  Archives: 
+    - By Date: "archive"
+    - By Tag: "tags"
+  Search: "search"
 
 # Build settings
 markdown: kramdown
+# permalink: /:year-:month-:day-:title/
+permalink: /:title/
 
-remote_theme: pages-themes/tactile@v0.2.0
+pagination:
+  enabled: true
+  sort_reverse: true
+  per_page: 10
+  debug: true
+
+excerpt_length: 50
+
+github: [metadata]
+
+# theme: dinky
 plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-feed
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+  - jekyll-paginate-v2
+  # - jekyll-compose
+  - jekyll-archives
+  - jekyll-seo-tag
+  - jekyll-sitemap
+  
+remote_theme: pdaugavietis/dinky-pages-theme
+# plugins:
+# - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 # theme: minima
 # plugins:
